Restrict allowed origin patterns to specific domains